compiler/test-data/parser/scheme/errors/missing_scheme_name.frel
module scheme.errors.missing_scheme_name

scheme {
    name : String
}
